<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViagemActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2">
        <LinearLayout
            android:background="#015488"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblNovaViagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lblCadastraNovaViagem"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </LinearLayout>
        <TextView
            android:id="@+id/lblDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblDestino" />

        <EditText
            android:id="@+id/edtDestino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblTipoDaViagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTipoDaViagem" />

        <RadioGroup
            android:id="@+id/rdgTipoDaViagem"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rdbLazer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rdbLazer" />

            <RadioButton
                android:id="@+id/rdbNegocios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/rdbNegocios" />
        </RadioGroup>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/lblDataChegada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblDataChegada" />

            <TextView
                android:id="@+id/lblDataSaida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblDataSaida" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnSelecionarDtChegada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSelecionarDtChegada" />

            <Button
                android:id="@+id/btnSelecionaeDtSaida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSelecionaeDtSaida" />
        </TableRow>

        <TextView
            android:id="@+id/lblOrcamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblOrcamento" />

        <EditText
            android:id="@+id/edtOrcamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/lblNumeroPessoas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblNumeroPessoas" />

            <EditText
                android:id="@+id/edtNumeroDePessoas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <Button
            android:id="@+id/btnCriarNovaViagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCriarNovaViagem" />
    </TableLayout>

</ScrollView>