<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GastoActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">
        <LinearLayout
            android:background="#015488"
            android:orientation="vertical">>

            <TextView
                android:id="@+id/lblNovoGasto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lblGasto"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <TextView
            android:id="@+id/lblTipoGasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTipoGasto" />

        <Spinner
            android:id="@+id/spnCategoriaGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/spnCategoriaGasto" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/lblValorGasto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblValorGasto" />

            <TextView
                android:id="@+id/lblDataGasto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblDataGasto" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/edtValorGasto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnSelecionarDataGasto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="selecionarData"
                android:text="@string/btnSelecionarDataGasto" />


        </TableRow>

        <TextView
            android:id="@+id/lblDescricaoGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblDescricaoGasto" />
        <EditText
            android:id="@+id/edtDescricaoGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblLocalGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:text="@string/lblLocalGasto" />

        <EditText
            android:id="@+id/edtLocalGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnRegistrarGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/btnRegistrarGasto" />
    </TableLayout>

</ScrollView>