<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical"
    tools:context=".DashboardActivity" >

    <TextView
        android:id="@+id/nomeApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#015488">

        <TextView
            android:id="@+id/lblNovoGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:drawableTop="@drawable/novo_gasto"
            android:onClick="selecionarOpcao"
            android:text="@string/lblNovoGasto"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblNovaViagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/lblNovoGasto"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:clickable="true"
            android:drawableTop="@drawable/nova_viagem"
            android:onClick="selecionarOpcao"
            android:text="@string/lblNovaViagem"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblListaViagens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/lblNovoGasto"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp"
            android:clickable="true"
            android:drawableTop="@drawable/minhas_viagens"
            android:onClick="selecionarOpcao"
            android:text="@string/lblMinhasViagens"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblConfiguracao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/lblNovaViagem"
            android:layout_alignBottom="@id/lblListaViagens"
            android:clickable="true"
            android:drawableTop="@drawable/configuracoes"
            android:onClick="selecionarOpcao"
            android:text="@string/lblConfiguracao"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>