<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".BoaViagemActivity" >

    <!--Logo-->
    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo" />
    <!--Campos de login-->
    <TextView
        android:id="@+id/lblUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblUsuario" />

    <EditText
        android:id="@+id/edtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" ><requestFocus />
    </EditText>
    <TextView
        android:id="@+id/lblSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSenha" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEntrar" />


</LinearLayout>